--- a/points/index.html
+++ b/points/index.html
@@ -104,60 +104,27 @@
     <div class="row reward-grid">
       <h2 class="my-4 text-warning"><i class="fa fa-exclamation-circle fa-xs fa-fw"></i> New Effects</h2>
       <div class="card-parent col-md-6 col-lg-4 col-xl-3 my-2">
-        <div class="card" onclick="copyCommand('144p')">
-          <img class="card-img-top ratio-1x1" src="img/rewards/stream/144p.png" alt="Reward image">
+        <div class="card" onclick="copyCommand('nicethrow')">
+          <img class="card-img-top ratio-1x1" src="img/rewards/stream/nicethrow.png" alt="Reward image">
           <div class="card-body">
             <h6 class="card-text text-muted">Sound & Visuals</h6>
-            <h4 class="card-title">144p</h4>
-            <h6 class="card-subtitle mb-2 text-body-secondary"><i class="fa fa-coins fa-fw"></i> 350 points</h6>
-            <p class="card-text reward-description" data-replace="Click to copy command"><span>RTX off</span></p>
-          </div>
-        </div>
-      </div>
-      <div class="card-parent col-md-6 col-lg-4 col-xl-3 my-2">
-        <div class="card" onclick="copyCommand('disappear')">
-          <img class="card-img-top ratio-1x1" src="img/rewards/stream/disappear.png" alt="Reward image">
-          <div class="card-body">
-            <h6 class="card-text text-muted">Sound & Visuals</h6>
-            <h4 class="card-title">Disappear</h4>
-            <h6 class="card-subtitle mb-2 text-body-secondary"><i class="fa fa-coins fa-fw"></i> 200 points</h6>
-            <p class="card-text reward-description" data-replace="Click to copy command"><span>Cya</span></p>
-          </div>
-        </div>
-      </div>
-      <div class="card-parent col-md-6 col-lg-4 col-xl-3 my-2">
-        <div class="card" onclick="copyCommand('fisheye')">
-          <img class="card-img-top ratio-1x1" src="img/rewards/stream/fisheye.png" alt="Reward image">
-          <div class="card-body">
-            <h6 class="card-text text-muted">Sound & Visuals</h6>
-            <h4 class="card-title">Fisheye</h4>
+            <h4 class="card-title">Nice Throw</h4>
             <h6 class="card-subtitle mb-2 text-body-secondary"><i class="fa fa-coins fa-fw"></i> 250 points</h6>
-            <p class="card-text reward-description" data-replace="Click to copy command"><span>Mmmmm funny camera</span></p>
+            <p class="card-text reward-description" data-replace="Click to copy command"><span>Strike!</span></p>
           </div>
         </div>
       </div>
       <div class="card-parent col-md-6 col-lg-4 col-xl-3 my-2">
-        <div class="card" onclick="copyCommand('superstar')">
-          <img class="card-img-top ratio-1x1" src="img/rewards/stream/superstar.png" alt="Reward image">
-          <div class="card-body">
-            <h6 class="card-text text-muted">Sound & Visuals</h6>
-            <h4 class="card-title">Super Star</h4>
-            <h6 class="card-subtitle mb-2 text-body-secondary"><i class="fa fa-coins fa-fw"></i> 200 points</h6>
-            <p class="card-text reward-description" data-replace="Click to copy command"><span>Wahooooooo!</span></p>
-          </div>
-        </div>
-      </div>
-      <div class="card-parent col-md-6 col-lg-4 col-xl-3 my-2">
-        <div class="card" onclick="copyCommand('fnaf')">
-          <img class="card-img-top ratio-1x1" src="img/rewards/sfx/fnaf.png" alt="Reward image">
+        <div class="card" onclick="copyCommand('narutokun')">
+          <img class="card-img-top ratio-1x1" src="img/rewards/sfx/narutokun.png" alt="Reward image">
           <div class="card-body">
             <h6 class="card-text text-muted">Sound Only</h6>
             <div class="d-flex justify-content-between">
-              <h4 class="card-title">Music Box</h4>
-              <i onclick="playSound('sfx/fnaf.mp3')" role="button" class="fa fa-volume-low fa-fw float-right my-2" data-bs-toggle="tooltip" title="Preview sound"></i>
+              <h4 class="card-title">Naruto-Kun</h4>
+              <i onclick="playSound('sfx/narutokun.mp3')" role="button" class="fa fa-volume-low fa-fw float-right my-2" data-bs-toggle="tooltip" title="Preview sound"></i>
             </div>
-            <h6 class="card-subtitle mb-2 text-body-secondary"><i class="fa fa-coins fa-fw"></i> 50 points</h6>
-            <p class="card-text reward-description" data-replace="Click to copy command"><span>very calming, not scary</span></p>
+            <h6 class="card-subtitle mb-2 text-body-secondary"><i class="fa fa-coins fa-fw"></i> 69 points</h6>
+            <p class="card-text reward-description" data-replace="Click to copy command"><span>Nolan forced me to make this</span></p>
           </div>
         </div>
       </div>
@@ -232,6 +199,16 @@
             <h4 class="card-title">Muted</h4>
             <h6 class="card-subtitle mb-2 text-body-secondary"><i class="fa fa-coins fa-fw"></i> 1000 points</h6>
             <p class="card-text reward-description" data-replace="Click to copy command"><span>Mutes my mic for 10 seconds</span></p>
+          </div>
+        </div>
+      </div>
+      <div class="card-parent col-md-6 col-lg-4 col-xl-3 my-2">
+        <div class="card" onclick="copyCommand('nicethrow')">
+          <img class="card-img-top ratio-1x1" src="img/rewards/stream/nicethrow.png" alt="Reward image">
+          <div class="card-body">
+            <h4 class="card-title">Nice Throw</h4>
+            <h6 class="card-subtitle mb-2 text-body-secondary"><i class="fa fa-coins fa-fw"></i> 250 points</h6>
+            <p class="card-text reward-description" data-replace="Click to copy command"><span>Strike!</span></p>
           </div>
         </div>
       </div>
@@ -390,6 +367,19 @@
             </div>
             <h6 class="card-subtitle mb-2 text-body-secondary"><i class="fa fa-coins fa-fw"></i> 50 points</h6>
             <p class="card-text reward-description" data-replace="Click to copy command"><span>very calming, not scary</span></p>
+          </div>
+        </div>
+      </div>
+      <div class="card-parent col-md-6 col-lg-4 col-xl-3 my-2">
+        <div class="card" onclick="copyCommand('narutokun')">
+          <img class="card-img-top ratio-1x1" src="img/rewards/sfx/narutokun.png" alt="Reward image">
+          <div class="card-body">
+            <div class="d-flex justify-content-between">
+              <h4 class="card-title">Naruto-Kun</h4>
+              <i onclick="playSound('sfx/narutokun.mp3')" role="button" class="fa fa-volume-low fa-fw float-right my-2" data-bs-toggle="tooltip" title="Preview sound"></i>
+            </div>
+            <h6 class="card-subtitle mb-2 text-body-secondary"><i class="fa fa-coins fa-fw"></i> 69 points</h6>
+            <p class="card-text reward-description" data-replace="Click to copy command"><span>Nolan forced me to make this</span></p>
           </div>
         </div>
       </div>
